fixing the fix that fixed the fix ---max-width and image align

--- a/public/stylesheets/theta.css
+++ b/public/stylesheets/theta.css
@@ -235,7 +235,7 @@ h3 {
 	font-size: 100%;
 	/*background: transparent;*/
 	padding:0.1em 1em 1em 1em;
-	max-width:33em;
+	max-width:40em;
 	margin:0.625em auto 0.625em auto;
 }
 
@@ -251,8 +251,8 @@ img.icon {
 	width: 25px;
 	float: left;
 	position: relative;
-	left: 15px;
-	bottom: 3px;
+	left: 5px;
+	bottom: 4px;
 }
 
 /* IE Hacks
